--- a/index.html
+++ b/index.html
@@ -5,14 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/img/kuromiIcon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="components/styles/reset.css">
     <link rel="stylesheet" href="components/styles/variables.css">
     <link rel="stylesheet" href="components/styles/style.css">
     <title>ToDo List</title>
 </head>
+
 <body class="p-5">
-    <header id="header" class="container sm">
-        <h1 class="page-title">Lista de Tarefas</h1>
-        <p class="page-description">
+
+    <header id="header" class="container-sm px-5">
+        <section class="d-flex justify-content-between align-items-center"> 
+            <h1 class="page-title">Lista de Tarefas</h1>
+
+            <label class="theme-input" for="changeTheme">
+                <input type="checkbox" id="changeTheme" checked>
+                <img class="icon" src="assets/emojis/kuromi-smile.png" alt="">
+            </label>
+        </section>
+
+        <p class="page-description text-center px-5 mt-2">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur recusandae id quos doloribus accusantium, sequi obcaecati optio quis nostrum? Est?
         </p>
     </header>
@@ -81,7 +92,7 @@
     </div>
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js
-"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+<script src="components/scripts/interface.js"></script>
 
 </html>
