--- a/index.html
+++ b/index.html
@@ -13,17 +13,24 @@
 
 <body class="p-5">
 
-    <header id="header" class="container-sm px-5">
+    <header id="header" class="container-sm mb-5">
         <section class="d-flex justify-content-between align-items-center"> 
-            <h1 class="page-title">Lista de Tarefas</h1>
+
+            <div class="titles d-flex align-items-center">
+                <h1 class="page-title">
+                    <span id="titleSymbol">#</span> 
+                    Lista de Tarefas
+                </h1>
+                <img src="assets/emojis/kuromi/kuromi-cellphone.png" alt="" id="iconPhone">
+            </div>
 
             <label class="theme-input" for="changeTheme">
                 <input type="checkbox" id="changeTheme" checked>
-                <img class="icon" src="assets/emojis/kuromi-smile.png" alt="">
+                <img class="icon" src="assets/emojis/kuromi/kuromi-smile.png" alt="" id="iconSmile">
             </label>
         </section>
 
-        <p class="page-description text-center px-5 mt-2">
+        <p class="page-description mt-2">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur recusandae id quos doloribus accusantium, sequi obcaecati optio quis nostrum? Est?
         </p>
     </header>
@@ -59,7 +66,7 @@
             </form>
         </section>
 
-        <section>
+        <section class="mt-3">
             <div id="display-controllers">
                 
             </div>
