Ajustes no header

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                     <span id="titleSymbol">#</span> 
                     Lista de Tarefas
                 </h1>
-                <img src="assets/emojis/kuromi/kuromi-cellphone.png" alt="" id="iconPhone">
+                <img src="assets/emojis/kuromi/kuromi-cellphone.png" alt="" id="iconPhone" class="border-icon">
             </div>
 
             <label class="theme-input" for="changeTheme">
                 <input type="checkbox" id="changeTheme" checked>
-                <img class="icon" src="assets/emojis/kuromi/kuromi-smile.png" alt="" id="iconSmile">
+                <img class="icon border-icon" src="assets/emojis/kuromi/kuromi-smile.png" alt="" id="iconSmile">
             </label>
         </section>
 
@@ -36,7 +36,7 @@
     </header>
 
     <div id="cards-container" class="container-sm">
-        <section class="card">
+        <section class="card p-5">
             <form action="">
                 <label for="task_nome">Nome da Tarefa</label>
                 <input type="text" id="task_nome">
