--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/img/kuromiIcon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="components/styles/reset.css">
     <link rel="stylesheet" href="components/styles/variables.css">
@@ -25,7 +26,7 @@
                 <img src="assets/emojis/kuromi/kuromi-cellphone.png" alt="" id="iconPhone" class="border-icon">
             </div>
 
-            <label class="theme-input" for="changeTheme">
+            <label class="theme-input filter-on-hover" for="changeTheme">
                 <input type="checkbox" id="changeTheme" checked>
                 <img class="icon border-icon" src="assets/emojis/kuromi/kuromi-smile.png" alt="" id="iconSmile">
             </label>
@@ -36,43 +37,57 @@
         </p>
     </header>
 
-    <div id="cards-container" class="container-sm">
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            Launch demo modal
-        </button>
+    <main id="main-content" class="container-sm">
 
-        <section class="mt-3">
-
-            <div id="display-controllers">
-                
+        <div id="display-controllers" class="d-flex justify-content-between">
+            <div class="filter-container d-flex gap-4 align-items-center">
+                <div class="filter-area">
+                    <label for="filterCategory">Categoria</label>
+                    <select class="filter-on-hover" name="" id="filterCategory">
+                        <option value="">Estudo</option>
+                        <option value="">Trabalho</option>
+                        <option value="">Pessoal</option>
+                    </select>
+                </div>
+                <div class="filter-area">
+                    <label for="filterSort">Ordenar Por</label>
+                    <select class="filter-on-hover" name="" id="filterSort">
+                        <option value="">Prioridade</option>
+                        <option value="">Data de Conclusão</option>
+                    </select>
+                </div>
             </div>
 
-            <table class="table table-sm table-borderless" id="task_tabela">
-                <thead>
-                    <tr>
-                        <th scope="col">Feita</th>
-                        <th scope="col">Nome da Tarefa</th>
-                        <th scope="col">Categoria</th>
-                        <th scope="col">Prioridade</th>
-                        <th scope="col">Data Limite</th>
-                        <th scope="col">Excluir</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">b</th>
-                        <th>b</th>
-                        <th>b</th>
-                        <th>b</th>
-                        <th>b</th>
-                        <th>b</th>
-                    </tr>
+            <button type="button" class="add-task-btn filter-on-hover" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <i class="bi bi-plus"></i>
+            </button>
 
-                </tbody>
-            </table>
-            
-        </section>
-    </div>
+        </div>
+
+        <table class="table table-sm table-borderless" id="task_tabela">
+            <thead>
+                <tr>
+                    <th scope="col">Feita</th>
+                    <th scope="col">Nome da Tarefa</th>
+                    <th scope="col">Categoria</th>
+                    <th scope="col">Prioridade</th>
+                    <th scope="col">Data Limite</th>
+                    <th scope="col">Excluir</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">b</th>
+                    <th>b</th>
+                    <th>b</th>
+                    <th>b</th>
+                    <th>b</th>
+                    <th>b</th>
+                </tr>
+
+            </tbody>
+        </table>
+    </main>
 
 
 
