Estilizacao da Tabela

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         </div>
 
-        <table class="table table-sm table-borderless" id="task_tabela">
+        <table class="table table-borderless" id="taskTable">
             <thead>
                 <tr>
                     <th scope="col">Feita</th>
@@ -75,7 +75,39 @@
                     <th scope="col">Excluir</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="taskBody">
+                <tr>
+                    <th scope="row">b</th>
+                    <th>b</th>
+                    <th>b</th>
+                    <th>b</th>
+                    <th>b</th>
+                    <th>b</th>
+                </tr>
+                <tr>
+                    <th scope="row">b</th>
+                    <th>b</th>
+                    <th>b</th>
+                    <th>b</th>
+                    <th>b</th>
+                    <th>b</th>
+                </tr>
+                <tr>
+                    <th scope="row">b</th>
+                    <th>b</th>
+                    <th>b</th>
+                    <th>b</th>
+                    <th>b</th>
+                    <th>b</th>
+                </tr>
+                <tr>
+                    <th scope="row">b</th>
+                    <th>b</th>
+                    <th>b</th>
+                    <th>b</th>
+                    <th>b</th>
+                    <th>b</th>
+                </tr>
                 <tr>
                     <th scope="row">b</th>
                     <th>b</th>
