Texto introdutorio adicionado

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
 
         <p class="page-description mt-2">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur recusandae id quos doloribus accusantium, sequi obcaecati optio quis nostrum? Est?
+            Bem Vindo! Aproveite este espaço para organizar seus afazeres de forma eficaz e (visualmente) agradável!
         </p>
     </header>
 
